--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "thread.h": "c",
         "synch.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
