--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "thread.h": "c",
-        "synch.h": "c"
+        "synch.h": "c",
+        "syscall.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
